# unity-webview

./: README.md
plugins/: WebViewObject.cs
plugins/Windows/: .gitignore  CMakeLists.txt
plugins/Windows/src/: WebViewPlugin.cpp
sample/Assets/: SampleSettings.lighting
sample/Assets/StreamingAssets/: sample.html
sample/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
